--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <footer>
                 <p>finals</p>
             </footer>
-    <script src="./Assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
     
 </body>
 
