--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div>    
                 </section></p>
             </footer>
-    <script src="./assets/js/script.js"></script>
+    <script src="./Assets/js/script.js"></script>
     
 </body>
 
