--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
 <body>
     <header>
         <!--View Highscores-->
-        <div class="scores">View Highscores</div>
+        <h1>View Highscores</h1>
+        <ol id="highscores"></ol>
+        <a href="index.html"><button>Go Back</button></a>
+    <button id="clear">Clear Highscores</button>
+
+    <script src="./assets/scores.js"></script>
         <!-- Timer -->
-        <div class="timer">Time: <span id="time">0</span></div>
+        <div class="timer">Time: <span id="time">05:00</span></div>
     </header>
 </body>
 
