--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="./Assets/css/style.css" rel="stylesheet">
     <title>Coding Quiz Challenge</title>
 </head>
 <body>
